try to get invoker logs in gh actions
Signed-off-by: olivier lamy <olamy@apache.org>

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -52,4 +52,4 @@ jobs:
         with:
           maven-version: 3.6.3
       - name: Build with Maven
-        run: mvn install -e -B -V
+        run: mvn install -e -B -V -Dinvoker.streamLogs=true
