--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,7 +25,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        java: [8, 11, 14, 15, 16-ea]
+        java: [11]
       fail-fast: false
 
     runs-on: ${{ matrix.os }}
@@ -46,6 +46,7 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v2.2.0
         with:
+          distribution: 'temurin'
           java-version: ${{ matrix.java }}
       - name: Set up Maven
         uses: stCarolas/setup-maven@v4.1
